Changes to be committed: 	modified:   app/Http/Controllers/api/PropertyController.php 	modified:   public/api.yml 	modified:   routes/api.php
